--- a/docs/esterni/manuale_manutentore/manuale_manutentore.tex
+++ b/docs/esterni/manuale_manutentore/manuale_manutentore.tex
@@ -9,13 +9,13 @@
 \input{\templates/front_page}
 \input{\templates/history}
 
-\settitolo{Manuale Utente}
+\settitolo{Manuale Manutentore}
 \setprogetto{Lumos Minima}
 \setcommittenti{Imola Informatica}
 \setredattori{Soldà Matteo}
 \setdestuso{esterno}
 \setdescrizione{
-Questo documento descrive le funzionalità del programma a coloro che dovessero usufruirne in qualità di utente con privilegi di base.
+Questo documento descrive le funzionalità del programma a coloro che dovessero usufruirne in qualità di manutentore.
 }
 
 \addversione{0.0.0}{05/09/2023}{Soldà Matteo}{}{Stesura scheletro}
@@ -51,8 +51,7 @@ L'applicazione permette l'utilizzo di 3 tipi di utente:
 L'utilizzo dell'utente \textbf{base} permette di utilizzare tutte le funzionalità di base dell'applicazione, tra cui la creazione, la modifica e la rimozione di tutti gli elementi presenti a sistema, oltre alla possibilità di segnalare i guasti agli impianti luminosi.\\ \\
 L'utilizzo dell'utente \textbf{amministratore} permette di fare tutto ciò che l'utente base può fare, con l'aggiunta della possibilità di modificare i ruoli degli altri utenti.\\ \\
 L'utilizzo dell'utente \textbf{manutentore} permette di fare tutto ciò che l'utente base può fare, con l'aggiunta della possibilità di visualizzare la lista dei lampioni guasti area per area, permettendo inoltre di segnalare la loro riparazione.\\\\
-In questo documento descriveremo l'utilizzo dell'utente con privilegi di base.
-
+In questo documento descriveremo l'utilizzo dell'utente con privilegi di manutentore.
 \subsection{Login}
 Il login è la prima cosa che viene richiesta qualora si raggiungesse l'indirizzo dell'applicazione. In questa schermata andrà inserito lo username e la password del proprio utente. Qualora i dati inseriti siano corretti, si verrà renderizzati automaticamente alla dashboard, altrimenti verrà riproposta la pagina di login con un errore. La durata della sessione dopo un login effettuato con successo è di un'ora.
 % Immagine della schermata di login
