Correzione typo nel Manuale Utente

--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -34,7 +34,7 @@ Questo documento descrive le funzionalità del programma a coloro che dovessero 
 \section{Introduzione e Origine del Progetto}
 Questo documento, destinato agli utenti finali del programma, descrive le funzionalità implementate e come utilizzarle al meglio.\\ \\
 La crisi internazionale determinata dal conflitto Russia-Ucraina iniziato nel 2022 ha cambiato radicalmente gli assetti geopolitici. Oltre ai notevoli costi sociali ed economici, ripropone a livello globale la centralità di temi energetici e ambientali.\\
-Il risparmio delle risorse del Pianeta, e in particolare delle fonti energetiche è entrato con forza nell'agenda politica dell'Unione Europea. Fra gli impatti più evidenti, spicca la crescita esponenziale del prezzo del gas, risorsa ancora largamente utilizzata come materia prima per la produzione di energia elettrica. Mentre in sede di Commissione Europea è in corso un acceso di dibattito sul tetto al prezzo del gas, in Italia si susseguono misure atte al risparmio energetico.\\\\
+Il risparmio delle risorse del Pianeta, e in particolare delle fonti energetiche è entrato con forza nell'agenda politica dell'Unione Europea. Fra gli impatti più evidenti, spicca la crescita esponenziale del prezzo del gas, risorsa ancora largamente utilizzata come materia prima per la produzione di energia elettrica. Mentre in sede di Commissione Europea è in corso un acceso dibattito sul tetto al prezzo del gas, in Italia si susseguono misure atte al risparmio energetico.\\\\
 Accanto a tali criticità, figurano il cambiamento climatico e il surriscaldamento globale che rappresentano un'ulteriore emergenza: gli altissimi livelli di emissioni di anidride carbonica e la gestione dei così detti gas serra che stanno irreversibilmente modificando il clima, il Pianeta e l'eredità che lasceremo alle generazioni future.\\\\
 Per far fronte al rincaro delle bollette energetiche, molti Comuni italiani stanno annunciando il taglio dell'illuminazione pubblica, che necessita di una quantità considerevole di energia elettrica.\\\\
 Con questo progetto proponiamo un sistema per l'ottimizzazione dell'illuminazione pubblica che permetta ai gestori di sfruttare la possibilità di regolare l'intensità della luce emessa dagli impianti di illuminazione. Un sistema così congegnato consentirebbe, da un lato, di garantire sicurezza stradale e sociale, e dall'altro permetterebbe di risparmiare energia e di conseguenza risorse economiche e ambientali.
